refactor: Dingtalk channel for modularity and improved documentation (#137)
* refactor: modularize dingtalk channel and restore docs/comments

* test: add vitest suite, coverage setup, and CI workflow

* chore(config): align ESM and oxc standards

- migrate lint/format toolchain from eslint+prettier to oxlint+oxfmt

- align tsconfig for ESM runtime and type-check workflow

- clean publish/package ignore and remove legacy config files

* fix(ci): sync pnpm lockfile with package changes

* fix(types): extract plugin module type and resolve TS2742

* fix(ci): add oxlint-tsgolint for type-aware lint

* refactor: remove unused files and consolidate timestamp utility function

* refactor: port PR #124 media download flow to inbound handler

* refactor: remove env-driven workspace helpers from config

* refactor: harden resolveUserPath home and relative path resolution

* refactor: add cross-platform resolveRelativePath helper

* fix(vitest): move coverage config under test

--- a/.oxfmtrc.jsonc
+++ b/.oxfmtrc.jsonc
@@ -6,6 +6,8 @@
   "experimentalSortPackageJson": {
     "sortScripts": true,
   },
+  "tabWidth": 2,
+  "useTabs": false,
   "ignorePatterns": [
     "apps/",
     "assets/",
