--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -11,10 +11,13 @@
     "eslint-plugin-unicorn/prefer-array-find": "off",
     "eslint/no-await-in-loop": "off",
     "eslint/no-new": "off",
+    "eslint/no-shadow": "off",
+    "eslint/no-unmodified-loop-condition": "off",
     "oxc/no-accumulating-spread": "off",
     "oxc/no-async-endpoint-handlers": "off",
     "oxc/no-map-spread": "off",
-    "typescript/no-explicit-any": "error",
+    "typescript/no-base-to-string": "warn",
+    "typescript/no-explicit-any": "warn",
     "typescript/no-extraneous-class": "off",
     "typescript/no-unsafe-type-assertion": "off",
     "unicorn/consistent-function-scoping": "off",
@@ -27,7 +30,7 @@
     "extensions/",
     "node_modules/",
     "patches/",
-    "pnpm-lock.yaml/",
+    "pnpm-lock.yaml",
     "skills/",
     "src/canvas-host/a2ui/a2ui.bundle.js",
     "Swabble/",
